--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <h1>Qalqa Stylesheet</h1>
-      <h2>Title 2</h2>
+      <h2 class="underline">Title 2</h2>
       <h3>Title 3</h3>
       <h4>Title 4</h4>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
